# flexrayusbinterface

./: CMakeLists.txt  README.md  package.xml
cmake/: FindMapbox.cmake  config.cmake.in
include/: ncurses_flexray.hpp
src/: FlexRayHardwareInterface.cpp  main.cpp
udev/: 30-ftdi.rules
