<?xml version="1.0"?>
<package>
    <name>flexrayusbinterface</name>
    <version>0.0.0</version>
    <description>The flexrayusbinterface package</description>
    <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <build_depend>pluginlib</build_depend>


    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>pluginlib</run_depend>


    <export>
        <roboy_simulation plugin="${prefix}/muscle_plugin.xml"/>
        <rviz plugin="${prefix}/walking_plugin.xml"/>
    </export>
</package>
